--- a/group_vars/all/apt.yml
+++ b/group_vars/all/apt.yml
@@ -4,3 +4,11 @@ apt_packages:
   - zip
   - unzip
   - vlc
+  - php7.1-common
+  - php7.1-cli
+  - php7.1-dev
+  - php7.1-fpm
+  - php7.1-curl
+  - php7.1-xml
+  - php7.1-opcache
+  - php7.1-mbstring
