--- a/playbooks/ubuntu.yml
+++ b/playbooks/ubuntu.yml
@@ -9,6 +9,7 @@
     - common
     - vaulttec.zsh
     - cmprescott.chrome
+    - wtanaka.slack
     - ferrarimarco.atom
     - spotify
     - jetbrains-toolbox
