Add OpenVPN packages

--- a/group_vars/all/apt.yml
+++ b/group_vars/all/apt.yml
@@ -15,3 +15,7 @@ apt_packages:
   - chrome-gnome-shell
   - gnome-tweak-tool
   - arc-theme
+  - openvpn
+  - network-manager-openvpn
+  - network-manager-openvpn-gnome
+  - openvpn-systemd-resolved
