--- a/playbooks/ubuntu.yml
+++ b/playbooks/ubuntu.yml
@@ -12,7 +12,7 @@
     - wtanaka.slack
     - ferrarimarco.atom
     - jetbrains-toolbox
-    - geerlingguy.php
+    # - geerlingguy.php
     - geerlingguy.composer
     - FGtatsuro.vagrant
     - kennyr707.zoom
