--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,10 +1,9 @@
 ---
-- src: ferrarimarco.atom
 - src: cmprescott.chrome
 - src: vaulttec.zsh
+- src: gantsign.visual-studio-code
 - src: geerlingguy.php
 - src: geerlingguy.composer
-- src: FGtatsuro.vagrant
 - src: wtanaka.slack
 - src: kennyr707.zoom
 - src: angstwad.docker_ubuntu
