--- a/playbooks/ubuntu.yml
+++ b/playbooks/ubuntu.yml
@@ -16,7 +16,7 @@
     # - geerlingguy.composer
     # - FGtatsuro.vagrant
     # - kennyr707.zoom
-    - albert
+    # - albert
     - angstwad.docker_ubuntu
     # - rvm_io.ruby
     # - iknite.spotify
