--- a/playbooks/ubuntu.yml
+++ b/playbooks/ubuntu.yml
@@ -20,4 +20,4 @@
     # - angstwad.docker_ubuntu
     # - rvm_io.ruby
     # - iknite.spotify
-    - gantsign.visual-studio-code
+    # - gantsign.visual-studio-code
